deployments/nexus/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-tools
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devops-tools
  annotations:
    metallb.universe.tf/address-pool: default
    external-dns.alpha.kubernetes.io/hostname: artifacts.sunshower.cloud
spec:
  selector:
    app: nexus-server
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8081
    - port: 5000
      name: docker
      protocol: TCP
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-server
  template:
    metadata:
      labels:
        app: nexus-server
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
        - name: nexus
          image: sonatype/nexus3:latest
          resources:
            limits:
              memory: "8Gi"
              cpu: "4000m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: artifacts-claim
#          emptyDir: {}
