deployments/nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: devops-tools
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  selector:
    app: nexus-server
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
